# loopd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
sdk/: package-lock.json  package.json  tsconfig.json
sdk/examples/: api-loop.ts
sdk/port-reference/: store.ts
sdk/src/: index.ts  langgraph.ts
sdk/src/core/: events.ts
sdk/src/types/: .gitkeep  EventKind.ts  IngestResponse.ts  LoopEvent.ts  OnTrip.ts  Run.ts  RunReason.ts  RunStatus.ts  Source.ts  ToolStatus.ts  Verdict.ts
src/: config.rs  main.rs
src/agents/: claude.rs  codex.rs  mod.rs
src/cli/: daemon.rs  dash.rs  fmt.rs  hooks.rs  ingest.rs  init.rs  kill.rs  logs.rs  mod.rs  policy.rs  ps.rs  run.rs  set.rs
src/core/: detector.rs  events.rs  git.rs  mod.rs  pricing.rs  store.rs
src/daemon/: client.rs  lifecycle.rs  mod.rs  server.rs
src/dashboard/: app.rs  mod.rs  ui.rs
src/observer/: mod.rs  sdk.rs  transcript.rs  webhook.rs
src/policies/: mod.rs
src/supervisor/: mod.rs
tests/: daemon_lifecycle.rs
